syntax = "proto3";

package com.trendyol.stove.grpc.test;

option java_multiple_files = true;
option java_package = "com.trendyol.stove.grpc.test";

// Request message for test service
message TestRequest {
  string message = 1;
  int32 count = 2;
}

// Response message for test service
message TestResponse {
  string message = 1;
  int32 count = 2;
  bool success = 3;
}

// Test service with all RPC types
service TestService {
  // Unary RPC - single request, single response
  rpc Unary(TestRequest) returns (TestResponse);

  // Server streaming RPC - single request, stream of responses
  rpc ServerStream(TestRequest) returns (stream TestResponse);

  // Client streaming RPC - stream of requests, single response
  rpc ClientStream(stream TestRequest) returns (TestResponse);

  // Bidirectional streaming RPC - stream of requests, stream of responses
  rpc BidiStream(stream TestRequest) returns (stream TestResponse);

  // Authenticated endpoint that checks for authorization header
  rpc AuthenticatedCall(TestRequest) returns (TestResponse);
}
